client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-nginx
  labels:
    name: client-nginx
spec:
  containers:
    - name: client-nginx
      image: nginx
