gateway-virtual-service.yaml
# See more at https://istio.io/docs/reference/config/networking/gateway/
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ingress-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtual-service
spec:
  hosts:
    - nginx-service.default.svc.cluster.local
    - a329d0ecf25064571aa269f461710fb1-667026945.ap-south-1.elb.amazonaws.com
  gateways:
    - mesh
    - ingress-gateway
  http:
    - route:
        - destination:
            host: nginx-service.default.svc.cluster.local
            subset: version1
          weight: 90
        - destination:
            host: nginx-service.default.svc.cluster.local
            subset: version2
          weight: 10
---
# See more at https://istio.io/docs/reference/config/networking/destination-rule/
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-destination-rule
spec:
  host: nginx-service.default.svc.cluster.local
  subsets:
    - name: version1
      labels:
        version: v1
    - name: version2
      labels:
        version: v2
